[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/UI/main_page_small.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MainPageSmall" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 322.0
margin_top = 275.0
margin_right = 416.0
margin_bottom = 321.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="HelpButton" type="Button" parent="."]
margin_left = 322.0
margin_top = 368.0
margin_right = 416.0
margin_bottom = 414.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="QuitButton" type="Button" parent="."]
margin_left = 322.0
margin_top = 462.0
margin_right = 416.0
margin_bottom = 508.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="."]
margin_left = 318.0
margin_top = 543.0
margin_right = 418.0
margin_bottom = 589.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyStationButton" type="Button" parent="."]
margin_left = 543.0
margin_top = 643.0
margin_right = 699.0
margin_bottom = 689.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="button_down" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="button_down" from="MyStationButton" to="." method="_on_MyStationButton_button_down"]
